--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -1,36 +1,26 @@
 ---
-layout: page
+layout: default
 ---
-
+<article class="post">
+<div class="post-content">
 <div class="row-game">
-    <div class="column" align="right">
+    <div class="column align-right">
 
-        <img class="team-logo-large" src='{{site.baseurl}}/assets/img/{{page.game.home.logo}}'/>
+        <img class="team-logo-large" src='{{site.baseurl_root}}/assets/img/{{page.game.home.logo}}'/>
         <h2>
             <a href='../../{{page.game.home.key}}'>
-                {{ page.game.home.display_name }}
+                {% include i18n_display_name.html entity=page.game.home %}
             </a>
         </h2>
         <br/>
         <br/>
 
         {% for event in page.game.home.events %}
-        <p>
-            <img width="30px" src="{{site.baseurl}}/assets/img/icon/{{event.type}}.png" />
-            {{event.time}}'  
-            {{event.player}}
-            {% if event.assist %}
-                <img width="30px" src="{{site.baseurl}}/assets/img/icon/assist.png" />
-                {{event.assist}}
-            {% elsif event.sub %}
-                <img width="30px" src="{{site.baseurl}}/assets/img/icon/sub.png" />
-                {{event.sub}}
-            {% endif %}
-        </p>
+            {% include game_event.html event=event %}
         {% endfor %}
     </div>
 
-    <div class="column" align="center">
+    <div class="column align-center">
         <p>{% translate {{ page.game.type | prepend: "games."}} %}</p>
         <p>{{ page.game.date }}</p>
         {% if page.game.schedule %}
@@ -38,73 +28,69 @@ layout: page
         {% else %}
         <h2> {{ page.game.home.score }} : {{ page.game.away.score }} </h2>
         {% endif %}
+        {% if page.game.penalty != nil %}
+        <p>（{%t penalty %} {{page.game.penalty[0]}}:{{page.game.penalty[1]}}）</p>
+        {% endif %}
         {% if page.game.extra %}
         <p>{{page.game.extra}}</p>
         {% endif %}
     </div>
 
-    <div class="column" align="left">
-        <img class="team-logo-large" src='{{site.baseurl}}/assets/img/{{page.game.away.logo}}'/>
+    <div class="column align-left">
+        <img class="team-logo-large" src='{{site.baseurl_root}}/assets/img/{{page.game.away.logo}}'/>
         <h2>
             <a href='../../{{page.game.away.key}}'>
-                {{ page.game.away.display_name }}
+                {% include i18n_display_name.html entity=page.game.away %}
             </a>
         </h2>
         <br/>
         <br/>
 
         {% for event in page.game.away.events %}
-        <p>
-            <img width="30px" src="{{site.baseurl}}/assets/img/icon/{{event.type}}.png" />
-            {{event.time}}'  
-            {{event.player}}
-            {% if event.assist %}
-                <img width="30px" src="{{site.baseurl}}/assets/img/icon/assist.png" />
-                {{event.assist}}
-            {% elsif event.sub %}
-                <img width="30px" src="{{site.baseurl}}/assets/img/icon/sub.png" />
-                {{event.sub}}
-            {% endif %}
-        </p>
+            {% include game_event.html event=event %}
         {% endfor %}
     </div>
 </div>
 
 <div class="row-game">
-    <div class="column game-page-squad" align="right">
+    <div class="column game-page-squad align-right">
         {% if page.game.home.squad != nil %}
         {% include squad.html squad=page.game.home.squad %}
         {% endif %}
 
         {% if page.game.home.bench != nil %}
+        <div class="row align-left">
         {% for player in page.game.home.bench %}
         <div class="player sub">
-            <img src="{{site.baseurl}}/assets/img/{{player.img | default: 'placeholder-player.jpg'}}" />
+            <img src="{{site.baseurl_root}}/assets/img/{{player.img | default: 'placeholder-player.jpg'}}" />
             <p>{{player.number}} {{player.name}}</p>
         </div>
         {% endfor %}
+        </div>
         {% endif %}
     </div>
 
-    <div class="column game-page-squad" align="left">
+    <div class="column game-page-squad align-left">
         {% if page.game.away.squad != nil %}
         {% include squad.html squad=page.game.away.squad %}
         {% endif %}
 
         {% if page.game.away.bench != nil %}
+        <div class="row align-left">
         {% for player in page.game.away.bench %}
         <div class="player sub">
-            <img src="{{site.baseurl}}/assets/img/{{player.img | default: 'placeholder-player.jpg'}}" />
+            <img src="{{site.baseurl_root}}/assets/img/{{player.img | default: 'placeholder-player.jpg'}}" />
             <p>{{player.number}} {{player.name}}</p>
         </div>
         {% endfor %}
+        </div>
         {% endif %}
     </div>
 </div>
 
 {% if page.game.video %}
 <div class="row-game">
-    <div class="column" align="center">
+    <div class="column align-center">
         {{page.game.video | url_decode}}
     </div>
 </div>
@@ -112,7 +98,7 @@ layout: page
 {% if page.game.videos %}
 {% for v in page.game.videos %}
 <div class="row-game">
-    <div class="column" align="center">
+    <div class="column align-center">
         {{v | url_decode}}
     </div>
 </div>
@@ -121,10 +107,13 @@ layout: page
 
 {% if page.game.images %}
 <div class="row-game">
-    <div class="column" align="center">
+    <div class="column align-center">
         {% for url in page.game.images %}
-        <img src="{{site.baseurl}}/assets/img/games/{{url}}" />
+        <img src="{{site.baseurl_root}}/assets/img/games/{{url}}" />
         {% endfor %}
     </div>
 </div>
 {% endif %}
+
+</div>
+</article>
