--- a/_layouts/season_friendly.html
+++ b/_layouts/season_friendly.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-{% include season_tabs.html name=page.display_name description=page.description %}
+{% include season_tabs.html name=page.display_name description=page.description link=page.link %}
 <div class="row">&nbsp;</div>
 
 <h3>{% translate games_list %}</h3>
