--- a/_layouts/tag_page.html
+++ b/_layouts/tag_page.html
@@ -1,6 +1,12 @@
 ---
 layout: default
 ---
+<div class="wrapper">
+  <a href="{{site.banners[0].link}}">
+    <img class="banner" src="{{site.banners[0].img}}">
+    </img>
+  </a>
+</div>
 
 <div class="home">
   {%- if page.title -%}
