--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,22 +3,30 @@
   <div class="wrapper">
     <a class="site-title" rel="author" href="{{ "/" | relative_url }}">
       <img style="height: 1.5em; width: auto" src={{ "favicon.png" | absolute_url }} />
-      {{ site.title | escape }}
+      {% include i18n_field.html entity=site field="title" %}
     </a>
 
-    <div class="site-nav-wrapper">
-      <nav class="site-nav">
-        <input type="checkbox" id="nav-trigger" class="nav-trigger" />
-        <label for="nav-trigger">
-            {% t season_list %} ▾
-        </label>
-
-        <div class="trigger">
-          {%- for s in site.data.nav_lists -%}
-            <a class="page-link" href="{{site.baseurl}}/seasons/{{s.key}}">{{ s.display_name | escape }}</a>
-          {%- endfor -%}
-        </div>
-      </nav>
+    <div class="dropdown">
+      <button class="dropbtn">{% t season_list %} ▾</button>
+      <div class="dropdown-content" style="min-width: 120px;">
+        {%- for s in site.data.nav_lists -%}
+        <a class="page-link" href="{{site.baseurl}}/seasons/{{s.key}}">{% include i18n_display_name.html entity=s %}</a>
+        {%- endfor -%}
+      </div>
     </div>
+
+    <div class="dropdown">
+      <button class="dropbtn"><img src="{{site.baseurl_root}}/assets/img/lang.svg"> ▾</button>
+      <div class="dropdown-content">
+        {%- for s in site.languages -%}
+        {%- if s == 'zh' -%}
+        <a class="page-link" href="{{site.baseurl_root}}{{page.url}}">{% t global.{{s}} %}</a>
+        {%- else -%}
+        <a class="page-link" href="{{site.baseurl_root}}/{{s}}{{page.url}}">{% t global.{{s}} %}</a>
+        {%- endif -%}
+        {%- endfor -%}
+      </div>
+    </div>
+
   </div>
 </header>
