--- a/_sass/tags.scss
+++ b/_sass/tags.scss
@@ -13,7 +13,7 @@
   background: #eee;
   border-radius: 3px 0 0 3px;
   color: #999;
-  display: inline-block;
+  // display: inline-block;
   height: 15px;
   line-height: 15px;
   padding: 0 10px 0 11px;
@@ -24,6 +24,10 @@
 
   font-size: 10px;
   margin: 5px;
+
+  &:hover {
+    text-decoration: none;
+  }
 }
 
 .tag::before {
