--- a/assets/css/custom-football-squad.css
+++ b/assets/css/custom-football-squad.css
@@ -20,10 +20,18 @@ figcaption {
 }
 
 .column {
-    float: left;
     width: 50%;
-    
     flex: 1;
+}
+
+.align-right {
+    text-align: right;
+}
+.align-center {
+    text-align: center;
+}
+.align-left {
+    text-align: left;
 }
 
 
@@ -59,8 +67,10 @@ figcaption {
 }
 
 .player {
+    display: inline-block;
     position: absolute;
-    width: 20%;
+    width: 19%;
+    margin: 0;
 }
 
 .player img {
@@ -74,19 +84,56 @@ figcaption {
 
 .player.sub {
     position:static !important;
-    float: left;
+}
+
+td.player-td {
+    text-align: left;
+    margin: auto;
+}
+
+.player.static {
+    position:static !important;
+    font-size: 12px;
+    width: auto;
+    vertical-align: middle;
+    margin:auto;
+}
+
+.player.static img {
+    width: 3em !important;
+    max-width: 3em !important;
+}
+
+/* .player-td span {
+    margin:auto;
+} */
+
+.player.static span {
+    text-align: center;
+    font-size: 12px;
+    white-space: nowrap;
+    margin-left: auto;
+    margin-right: 0;
+    vertical-align: middle;
+}
+
+.player-game-result {
+    color:#555;
+    font-size: smaller;
 }
 
 .team-page-squad .player p {
     text-align: center;
     font-size: 12px;
     white-space: nowrap;
+    margin-bottom: 15px;
 }
 
 .game-page-squad .player p {
     text-align: center;
     font-size: clamp(8px, 0.8vw, 12px);
     white-space: nowrap;
+    margin-bottom: 15px;
 }
 
 /* GK */
@@ -107,6 +154,11 @@ figcaption {
     left: 8%;
 }
 
+.player.LCB2 {
+    bottom: 20%;
+    left: 20%;
+}
+
 .player.LCB {
     bottom: 20%;
     left: 30%;
@@ -121,6 +173,11 @@ figcaption {
 .player.RCB {
     bottom: 20%;
     right: 30%;
+}
+
+.player.RCB2 {
+    bottom: 20%;
+    right: 20%;
 }
 
 .player.RB {
@@ -186,10 +243,20 @@ figcaption {
     left: 10%;
 }
 
+.player.LAM {
+    bottom: 65%;
+    left: 20%;
+}
+
 .player.CAM {
     bottom: 65%;
     left: 50%;
     transform: translateX(-50%);
+}
+
+.player.RAM {
+    bottom: 65%;
+    right: 20%;
 }
 
 .player.RW {
