--- a/assets/css/custom-football-squad.css
+++ b/assets/css/custom-football-squad.css
@@ -1,3 +1,13 @@
+img.centered {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+figcaption {
+    text-align: center;
+}
+
 .row-game {
     display: -ms-flex; display: -webkit-flex; display: flex;
 }
@@ -10,10 +20,18 @@
 }
 
 .column {
-    float: left;
     width: 50%;
-    
     flex: 1;
+}
+
+.align-right {
+    text-align: right;
+}
+.align-center {
+    text-align: center;
+}
+.align-left {
+    text-align: left;
 }
 
 
@@ -49,8 +67,10 @@
 }
 
 .player {
+    display: inline-block;
     position: absolute;
-    width: 20%;
+    width: 19%;
+    margin: 0;
 }
 
 .player img {
@@ -64,19 +84,56 @@
 
 .player.sub {
     position:static !important;
-    float: left;
+}
+
+td.player-td {
+    text-align: left;
+    margin: auto;
+}
+
+.player.static {
+    position:static !important;
+    font-size: 12px;
+    width: auto;
+    vertical-align: middle;
+    margin:auto;
+}
+
+.player.static img {
+    width: 3em !important;
+    max-width: 3em !important;
+}
+
+/* .player-td span {
+    margin:auto;
+} */
+
+.player.static span {
+    text-align: center;
+    font-size: 12px;
+    white-space: nowrap;
+    margin-left: auto;
+    margin-right: 0;
+    vertical-align: middle;
+}
+
+.player-game-result {
+    color:#555;
+    font-size: smaller;
 }
 
 .team-page-squad .player p {
     text-align: center;
     font-size: 12px;
     white-space: nowrap;
+    margin-bottom: 15px;
 }
 
 .game-page-squad .player p {
     text-align: center;
     font-size: clamp(8px, 0.8vw, 12px);
     white-space: nowrap;
+    margin-bottom: 15px;
 }
 
 /* GK */
@@ -97,6 +154,11 @@
     left: 8%;
 }
 
+.player.LCB2 {
+    bottom: 20%;
+    left: 20%;
+}
+
 .player.LCB {
     bottom: 20%;
     left: 30%;
@@ -111,6 +173,11 @@
 .player.RCB {
     bottom: 20%;
     right: 30%;
+}
+
+.player.RCB2 {
+    bottom: 20%;
+    right: 20%;
 }
 
 .player.RB {
@@ -176,10 +243,20 @@
     left: 10%;
 }
 
+.player.LAM {
+    bottom: 65%;
+    left: 20%;
+}
+
 .player.CAM {
     bottom: 65%;
     left: 50%;
     transform: translateX(-50%);
+}
+
+.player.RAM {
+    bottom: 65%;
+    right: 20%;
 }
 
 .player.RW {
@@ -221,7 +298,21 @@ table.playerlist td {
 }
 
 .team-logo {
-    width: 30px !important;
+    height: 30px !important;
+    padding: 0.1em;
+    object-fit: contain;
+}
+
+.row-game .column .team-logo-large {
+    width: 70%;
+    max-height: 150px;
+    object-fit: contain;
+}
+
+.team-page-logo {
+    width: 20%;
+    max-height: 150px;
+    object-fit: contain;
 }
 
 /* team history stats table */
