--- a/assets/main.css
+++ b/assets/main.css
@@ -1,3 +1,19 @@
+.tags { list-style: none; margin: 0; overflow: hidden; padding: 0; }
+
+.tags li { float: left; }
+
+.tag { background: #eee; border-radius: 3px 0 0 3px; color: #999; height: 15px; line-height: 15px; padding: 0 10px 0 11px; position: relative; margin: 0 10px 10px 0; text-decoration: none; -webkit-transition: color 0.2s; font-size: 10px; margin: 5px; }
+
+.tag:hover { text-decoration: none; }
+
+.tag::before { background: #fff; border-radius: 10px; /* box-shadow: inset 0 1px rgba(0, 0, 0, 0.25); */ content: ''; height: 3px; left: 5px; position: absolute; width: 3px; top: 6px; }
+
+.tag::after { background: #fff; border-bottom: 7.5px solid transparent; border-left: 5px solid #eee; border-top: 7.5px solid transparent; content: ''; position: absolute; right: 0; top: 0; }
+
+.tag:hover { background-color: #661717; color: white; }
+
+.tag:hover::after { border-left-color: #661717; }
+
 /** Reset some basic elements */
 body, h1, h2, h3, h4, h5, h6, p, blockquote, pre, hr, dl, dd, ol, ul, figure { margin: 0; padding: 0; }
 
@@ -27,9 +43,7 @@ li > ul, li > ol { margin-bottom: 0; }
 h1, h2, h3, h4, h5, h6 { font-weight: 400; }
 
 /** Links */
-a { color: #2a7ae2; text-decoration: none; }
-
-a:visited { color: #1756a9; }
+a { color: #661717; text-decoration: none; }
 
 a:hover { color: #111; text-decoration: underline; }
 
@@ -69,11 +83,18 @@ table { margin-bottom: 30px; width: 100%; text-align: left; color: #3f3f3f; bord
 
 table tr:nth-child(even) { background-color: #f7f7f7; }
 
-table th, table td { padding: 10px 15px; }
+table th, table td { padding: 6px 6px; }
 
 table th { background-color: #f0f0f0; border: 1px solid #dedede; border-bottom-color: #c9c9c9; }
 
 table td { border: 1px solid #e8e8e8; }
+
+table.small { width: auto; }
+
+table.small th, table.small td { padding: 10px 12px; }
+
+/** Game lines */
+.game-line span { color: #aaa; }
 
 /** Site header */
 .site-header { border-top: 5px solid #424242; border-bottom: 1px solid #e8e8e8; min-height: 55.95px; position: relative; }
@@ -82,17 +103,37 @@ table td { border: 1px solid #e8e8e8; }
 
 .site-title, .site-title:visited { color: #424242; }
 
-.site-nav { float: right; line-height: 54px; }
+.dropbtn { font-size: 16px; background-color: #fdfdfd; border: none; padding: 5px 5px; cursor: pointer; }
 
-.site-nav .nav-trigger { display: none; }
+.dropdown { position: relative; display: block; float: right; top: 10px; right: 5px; margin: 2px; }
 
-.site-nav .menu-icon { display: none; }
+.dropdown-content { display: none; position: absolute; right: 0; background-color: #fdfdfd; z-index: 1; border: 1px solid #e8e8e8; border-radius: 5px; font-size: smaller; }
 
-.site-nav .page-link { color: #111; line-height: 1.5; }
+.dropdown-content a { color: #111; padding: 5px 10px; line-height: 1.5; text-align: left; display: block; }
 
-.site-nav .page-link:not(:last-child) { margin-right: 20px; }
+.dropdown-content a:hover { background-color: #f1f1f1; }
 
-@media screen and (max-width: 600px) { .site-nav { position: absolute; top: 9px; right: 15px; background-color: #fdfdfd; border: 1px solid #e8e8e8; border-radius: 5px; text-align: right; } .site-nav label[for="nav-trigger"] { display: block; float: right; width: 36px; height: 36px; z-index: 2; cursor: pointer; } .site-nav .menu-icon { display: block; float: right; width: 36px; height: 26px; line-height: 0; padding-top: 10px; text-align: center; } .site-nav .menu-icon > svg { fill: #424242; } .site-nav input ~ .trigger { clear: both; display: none; } .site-nav input:checked ~ .trigger { display: block; padding-bottom: 5px; } .site-nav .page-link { display: block; padding: 5px 10px; margin-left: 20px; } .site-nav .page-link:not(:last-child) { margin-right: 0; } }
+.dropdown:hover .dropdown-content { display: block; }
+
+.dropdown:hover .dropbtn { background-color: #fdfdfd; }
+
+.site-nav-wrapper { position: relative; }
+
+.site-nav { float: right; position: absolute; top: 10px; user-select: none; right: 5px; background-color: #fdfdfd; border: 1px solid #e8e8e8; border-radius: 5px; }
+
+.site-nav input.nav-trigger { display: none; }
+
+.site-nav label[for="nav-trigger"] { display: block; float: right; text-align: center; width: auto; height: auto; padding: 5px 10px; z-index: 2; cursor: pointer; }
+
+.site-nav input ~ .trigger { clear: both; display: none; }
+
+.site-nav input:checked ~ .trigger { display: block; padding-bottom: 5px; }
+
+.site-nav .page-link { color: #111; display: block; padding: 5px 10px; line-height: 1.5; text-align: left; }
+
+.site-nav .page-link:not(:last-child) { margin-right: 0; }
+
+img.banner { padding-bottom: 20px; margin-left: auto; margin-right: auto; max-width: 95%; display: block; }
 
 /** Site footer */
 .site-footer { border-top: 1px solid #e8e8e8; padding: 30px 0; }
